--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,6 @@
 <h1>Sample App</h1>
 <p>
-This is the about page for the
+This is the <b>contact</b> page for the
 <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
 sample application.
 </p>
